2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* Translation starts in earnest now, so please do not change the 
	English text unless absolutely necessary.

2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Correct the caption for the drive mount applet.

2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* Added README.txt, README_translators.txt, README_screenshots.txt.

2005-03-02  Davyd Madeley  <davyd@madeley.id.au>

	* release-notes.xml:
	* rnapplets.xml:
	* rnapplications.xml:
	* rncontrolcenter.xml:
	* rninstallation.xml: Add new figures.
	
	* figures/figure-applet-mixer.png:
	* figures/figure-applet-weather.png:
	* figures/figure-evolution-mail.png:
	* figures/figure-gnome-desktop.png: New images.


2005-03-02  Davyd Madeley  <davyd@madeley.id.au>

	* rnapplets.xml:
	* rngames.xml:
	* rnsysadmin.xml: Add images.
	
	* figures/figure-applet-modem.png: Fixed up strange image.
	
	* figures/figure-applet-drivemount.png:
	* figures/figure-applet-stickies.png:
	* figures/figure-applet-trash.png:
	* figures/figure-game-nibbles.png:
	* figures/figure-game-same-gnome.png:
	* figures/figure-gnome-system-tools.png:
	* figures/figure-keyboard-properties+layout.png:
	* figures/figure-logviewer.png: New images.
	

2005-03-02  Simos Xenitellis  <simos@gnome.org>

	* el.po: Reviewed Greek translation.

2005-03-01  Murray Cumming  <murrayc@localhost.localdomain>

	* release-notes.xml: Use ulink instead of a. 

2005-03-01  Elijah Newren  <newren@gmail.com>

	* release-notes.xml: Update the known issues section.  Still need
	feedback from Luis.

2005-03-01  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Update language lists with 50 best supported
	languages as of now (those that don't make it will be removed).

2005-03-02  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-applet-modem.png: Another figure. Probably about
	  halfway through uploading them. In this one, the menu has a 3px