@@ -135,7 +135,8 @@
     <para>Now you can even browse for other Gnome Meeting users on your local network without discovering their contact details first. And you can view your own video output side by side with the video from your conversation partner, so you see what they see.
 
     <figure id="rnscreenshot-gnomemeeting">
-      <title>FIXME (hard) - The internet telephony and video conferencing client</title>
+      <!-- FIXME (hard) -->
+      <title>The internet telephony and video conferencing client</title>
       <screenshot>
         <mediaobject>
           <imageobject><imagedata fileref="&urlfiguresbase;figure-gnomemeeting.png" format="PNG"/></imageobject>
