@@ -82,5 +82,7 @@
     </figure>
     </para>
 
+  </sect3>
+
 
 </sect2>
